--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.5"
   },
+  "engines": {
+    "npm": "6.4.1",
+    "node": "10.12.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
